# xp_klondike

./: CMakeLists.txt  README.md  google-test.cmake
src/: CMakeLists.txt  Card.cc  Card.h  CardStack.cc  CardStack.h  Color.cc  Color.h  Error.cc  Error.h  Foundation.cc  Foundation.h  Game.cc  Game.h  Number.cc  Number.h  Pile.cc  Pile.h  Stock.cc  Stock.h  Suit.cc  Suit.h  Waste.cc  Waste.h
test/: CMakeLists.txt  CardBuilder.cc  CardBuilder.h  CardTest.cc  FoundationBuilder.cc  FoundationBuilder.h  FoundationTest.cc  GameBuilder.cc  GameBuilder.h  GameTest.cc  NumberTest.cc  PileBuilder.cc  PileBuilder.h  PileTest.cc  StockBuilder.cc  StockBuilder.h  StockTest.cc  SuitTest.cc
